asfmux: don't use buffer after giving away ownership

https://bugzilla.gnome.org/show_bug.cgi?id=719553